airshift - fixed button height with input modal

--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -1098,7 +1098,6 @@ p {
   }
   .btn.btn-primary {
     width: 30%;
-    font-size: 1.1rem;
   }
   //form-control input
   #modal-telephone {
@@ -1360,11 +1359,10 @@ p {
     width: 95% !important;
     margin-left: 2.5%;
     .iti {
-      width: 60%;
+      width: 58%;
     }
     .btn.btn-primary {
-      width: 40%;
-      font-size: 1rem;
+      width: 42%;
     }
     .download-img {
       height: 2.5rem !important;
